# odl_mibmi

./: CMakeLists.txt  CMakeLists_0212_BKP.txt  CMakeLists_0220_BKP.txt  CMakeLists_bkp.txt  CMakeLists_mixedSW_bkp_1231.txt  application.c  cmake_script_run_net.sh  main.c  main_BKP_0212.c  main_BKP_one_sample.c  main_LwF.c  main_bkp_0205.c  sdk.config
1229_D2_15_mixedSW_final_MIBMINet_100trials/inc/: network.h
1229_D2_15_mixedSW_final_MIBMINet_100trials/src/: BNReluConvolution0.c  BNReluConvolution1.c  main.c  network.c
1229_D2_15_mixedSW_final_MIBMINet_100trials_reduced_L1_alloc/inc/: network.h
1229_D2_15_mixedSW_final_MIBMINet_100trials_reduced_L1_alloc/src/: BNReluConvolution0.c  network.c
1229_D2_15_mixedSW_final_MIBMINet_100trials_reduced_L1_alloc_80000/inc/: FullyConnected6.h
1229_D2_15_mixedSW_final_MIBMINet_100trials_reduced_L1_alloc_80000/src/: main.c  network_bkp.c
1229_D2_15_mixedSW_final_MIBMINet_100trials_reduced_L1_alloc_80000_bkp/: vars.mk
1229_D2_15_mixedSW_final_MIBMINet_100trials_reduced_L1_alloc_80000_bkp_new/: Makefile
1229_D2_15_mixedSW_final_MIBMINet_100trials_reduced_L1_alloc_80000_bkp_new/src/: network.c
1229_D2_15_mixedSW_final_MIBMINet_100trials_reduced_L1_alloc_80000_new/src/: mem.c
1229_D2_15_mixedSW_final_MIBMINet_100trials_reduced_L1_alloc_bkp/src/: BNReluConvolution1.c  Pooling2.c
Quantlab_MIBMI_GAP9/: CMakeLists.txt  Makefile  script_run_network.sh  vars.mk
Quantlab_MIBMI_GAP9/Makefile_vers/: Makefile for DORY-net  Makefile for FCN
Quantlab_MIBMI_GAP9/hex/: BNReluConvolution0_weights.hex  BNReluConvolution1_weights.hex  BNReluConvolution3_weights.hex  BNReluConvolution4_weights.hex  FullyConnected6_weights.hex  inputs.hex
Quantlab_MIBMI_GAP9/inc/: net.h  network.h
Quantlab_MIBMI_GAP9/src/: BNReluConvolution0.c  BNReluConvolution1.c  BNReluConvolution3.c  BNReluConvolution4.c  FullyConnected6.c  Pooling2.c  Pooling5.c  net.c  network.c
bkp_files/main for dory-mibmi/: main.c
build_0207/: CMakeCache.txt  main
build_0207/devicetree/dtb/: gap.dtb
build_0207/devicetree/include/: dt.c  dt.h
build_0207/freertos/cmake/: freertosTargets.cmake
build_0207/freertos/pmsis/: cmake_install.cmake
build_0207/freertos/pmsis/archi/: cmake_install.cmake
build_0207/freertos/pmsis/implem/: Makefile
build_0207/freertos/vendors/gwt/gap9/pmsis/: Makefile
build_0207/freertos/vendors/gwt/libs/: Makefile
build_0207/freertos/vendors/gwt/pmsis/: Makefile
build_0207/freertos/vendors/gwt/pmsis/backend/: Makefile  cmake_install.cmake
build_0207/freertos/vendors/gwt/pmsis/rtos/: Makefile
build_0208/: CMakeCache.txt  __vars.cmake  main
build_0208/devicetree/include/: dt.c  dt.h
build_0419_bad/: gvsoc_config.json  main
build_0419_bad/devicetree/dtb/: gap9_v2_wlcsp.dtb  gap9evk_v2_0.dtb
build_0419_bad/devicetree/include/: dt.c  dt.h
build_0419_bad/freertos/pmsis/implem/: cmake_install.cmake
build_bkp/: main
build_bkp/devicetree/include/: dt.c  dt.h
build_bkp/freertos/: cmake_install.cmake
build_bkp/freertos/freertos_kernel/portable/: cmake_install.cmake
build_bkp/freertos/vendors/gwt/: cmake_install.cmake
build_bkp/freertos/vendors/gwt/libs/: cmake_install.cmake
build_bkp_'5'2/: Makefile  main
build_bkp_'5'2/devicetree/dtb/: gap9evk_v1_3.dtb  gap9mod_v1_0_b.dtb
build_bkp_'5'2/devicetree/include/: dt.c  dt.h
build_bkp_'5'2/freertos/: Makefile
build_bkp_'5'2/freertos/freertos_kernel/portable/GCC/RI5CY-GAP9/: Makefile
build_bkp_'5'2/freertos/pmsis/api/: Makefile
build_bkp_'5'2/freertos/pmsis/bsp/: cmake_install.cmake
build_bkp_'5'2/freertos/vendors/gwt/libs/printf/: cmake_install.cmake
build_bkp_'5'2/freertos/vendors/gwt/pmsis/rtos/: cmake_install.cmake
build_bkp_'5'2/libs/gap_lib/: cmake_install.cmake
build_bkp_0206/freertos/config/gap9/: Makefile
build_bkp_0206/freertos/freertos_kernel/: cmake_install.cmake
build_bkp_0212/: CMakeCache.txt  Makefile  main
build_bkp_0212/devicetree/include/: dt.c  dt.h
build_bkp_0212/freertos/pmsis/: Makefile
build_bkp_0308/: CMakeCache.txt  __vars.cmake  main
build_bkp_0308/devicetree/include/: dt.c  dt.h
build_bkp_0308/freertos/config/gap9/: cmake_install.cmake
build_bkp_0308/freertos/pmsis/api/: cmake_install.cmake
build_bkp_0308/freertos/vendors/gwt/gap9/: cmake_install.cmake
build_bkp_0308/freertos/vendors/gwt/gap9/pmsis/: cmake_install.cmake
build_prev/: cmake_install.cmake  main
build_prev/devicetree/include/: dt.c  dt.h
build_prev/freertos/freertos_kernel/portable/GCC/RI5CY-GAP9/: cmake_install.cmake
build_prev_1230/: Makefile  __vars.cmake  main
build_prev_1230/devicetree/include/: dt.c  dt.h
build_prev_1230/freertos/pmsis/archi/: Makefile
build_prev_1230/freertos/vendors/gwt/: Makefile
build_prev_1230/freertos/vendors/gwt/pmsis/: cmake_install.cmake
build_prev_1230/libs/gap_lib/: Makefile
linear-data-files_bkp/: linear-data_1230_correct_bkp.h  linear-data_new_bkp_wrong_weightgrad_shape.h  linear-data_prev.h
new_gap_test_fcn_mibmi_fp32/: Makefile_bkp_ori  linear-data_1231_prev_correct_1_sample_5_epochs.h  net.c  net_afterLwF.c  net_after_LwF_bkp.c  stats.h
new_gap_test_fcn_mibmi_fp32/utils/: GM.py  GM_multi_inputs.py  bias_fc.pt  inputs_fc.pt  linear-data-LwF.h
new_gap_test_fcn_mibmi_fp32_LwF/: CMakeLists.txt  net.h  net_before_LwF_bkp.c  net_bkp.c
new_gap_test_fcn_mibmi_fp32_LwF/utils/: GM_multi_inputs_LwF.py  linear-data_0205_bkp.h  weights_fc.pt
new_gap_test_fcn_mibmi_fp32_bkp/: Makefile  net.c
new_gap_test_fcn_mibmi_fp32_bkp/utils/: GM.py
new_gap_test_fcn_mibmin_fp32_before_LwF/: gap_script_run_network.sh  net.c  run_script.sh
new_gap_test_fcn_mibmin_fp32_before_LwF/utils/: GM_multi_inputs.py  inputs_fc.npy  linear-data_previous_dummy_bkp.h
